import board.Tile;
import game.Letter;

public class Main {



    public static void main(String[] args) {
        Letter bogstav = new Letter('a', 5);
        System.out.println(bogstav);
    }
}