package board;

public enum Direction {
    VERTICAL,
    HORISONTAL,
}
